--- a/lib/examples/tests/bloc_example_remake-master/pubspec.yaml
+++ b/lib/examples/tests/bloc_example_remake-master/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_repository:
     path: packages/hive_repository
+  mockito: ^5.3.2
   nasa_api:
     path: packages/nasa_api
   shimmer: ^2.0.0
